--- a/index.html
+++ b/index.html
@@ -278,6 +278,15 @@
                                 </li>
                                 <li><strong> Concerto for Two Violins in D minor </strong> Sunny's recording for fun during covid.
                                 </li>
+                            </ul> 
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/9xO6ti2r8Sg?si=MQW3jNxj4WPTrMjJ&amp;start=3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                            <ul class="list-inline item-details">
+                                <li>Date:
+                                    <strong> Feb 2018
+                                    </strong>
+                                </li>
+                                <li><strong> Ode to Joy </strong> Sunny's first ensemble.
+                                </li>
                             </ul>
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/mMp5CuAc0CM?si=tSjL1Wk-XGoYHToh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                             <ul class="list-inline item-details">
@@ -286,6 +295,15 @@
                                     </strong>
                                 </li>
                                 <li><strong> Theme from Witches' Dance </strong> Sunny auditioned for ensemble.
+                                </li>
+                            </ul>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/xwB6QBJ1qh4?si=ppv3N-CXpNuMmGHh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+							<ul class="list-inline item-details">
+                                <li>Date:
+                                    <strong>Jun 2017
+                                    </strong>
+                                </li>
+                                <li><strong> Gossec Gavotte </strong> Sunny's second voilin performance.
                                 </li>
                             </ul>
                         </div>
@@ -377,22 +395,47 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Pothole Finder</h2>
+						<h2>Hip-hop Performance</h2>
                             <hr class="star-primary">
-                            
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/oSF4QhxZIXM?si=Xy9mNLhwy6_r1oW8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                             <ul class="list-inline item-details">
                                 <li>Date:
-                                    <strong>Feb 2019
+                                    <strong>June 2023
                                     </strong>
                                 </li>
-                                <li>Technologies:
-                                    <strong>Arduino, GPS, accelerometer, Python, MySQL
-                                    </strong>
+                                <li><strong> Song name </strong> Sunny is left 1.
                                 </li>
                             </ul>
-                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/bE9C3bHTHdU?si=Vs3OmBj9ABe2kqhf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                            <ul class="list-inline item-details">
+                                <li>Date:
+                                    <strong>June 2023
+                                    </strong>
+                                </li>
+                                <li><strong> Song name </strong> Sunny is left 1.
+                                </li>
+                            </ul>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/bE9C3bHTHdU?si=2T1xPWTuAQYrwtXk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+							<ul class="list-inline item-details">
+                                <li>Date:
+                                    <strong>June 2023
+                                    </strong>
+                                </li>
+                                <li><strong> Song name </strong> Sunny is in the center.
+                                </li>
+                            </ul>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/PXshKh1JZ_g?si=qUg8D3JcHzgGARTs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                            <ul class="list-inline item-details">
+                                <li>Date:
+                                    <strong>June 2023
+                                    </strong>
+                                </li>
+                                <li><strong> Song name </strong> Sunny is on the second row, right 1.
+                                </li>
+                            </ul>
                         </div>
                     </div>
+                    <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                 </div>
             </div>
         </div>
