add closing button

--- a/index.html
+++ b/index.html
@@ -403,7 +403,16 @@
                                     <strong>June 2023
                                     </strong>
                                 </li>
-                                <li><strong> Song name </strong> Sunny is left 1.
+                                <li><strong> Song name </strong> Sunny is positioned on the left side in the thumbnail.
+                                </li>
+                            </ul>
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/CTO_fU3GfyQ?si=yvkqWhcWCQ0eN1V0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                            <ul class="list-inline item-details">
+                                <li>Date:
+                                    <strong>June 2023
+                                    </strong>
+                                </li>
+                                <li><strong> LE SSERAFIM </strong> Sunny is positioned on the right side in the thumbnail.
                                 </li>
                             </ul>
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/bE9C3bHTHdU?si=Vs3OmBj9ABe2kqhf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -412,7 +421,7 @@
                                     <strong>June 2023
                                     </strong>
                                 </li>
-                                <li><strong> Song name </strong> Sunny is left 1.
+                                <li><strong> Song name </strong> Sunny is positioned on the left side in the thumbnail.
                                 </li>
                             </ul>
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/bE9C3bHTHdU?si=2T1xPWTuAQYrwtXk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -421,7 +430,7 @@
                                     <strong>June 2023
                                     </strong>
                                 </li>
-                                <li><strong> Song name </strong> Sunny is in the center.
+                                <li><strong> Song name </strong> Sunny is centrally positioned in the thumbnail.
                                 </li>
                             </ul>
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/PXshKh1JZ_g?si=qUg8D3JcHzgGARTs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
