add closing button

--- a/index.html
+++ b/index.html
@@ -397,6 +397,24 @@
                         <div class="modal-body">
 						<h2>Hip-hop Performance</h2>
                             <hr class="star-primary">
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/gE1EBDNXPmA?si=TKkfNmuQYx1XR2O4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+							<ul class="list-inline item-details">
+                                <li>Date:
+                                    <strong>Dec 2023
+                                    </strong>
+                                </li>
+                                <li><strong> Song name </strong> Sunny is centrally positioned in the thumbnail.
+                                </li>
+                            </ul>
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/i-FVNhOLfMU?si=UyofM6dolLlaG97g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+							<ul class="list-inline item-details">
+                                <li>Date:
+                                    <strong>Dec 2023
+                                    </strong>
+                                </li>
+                                <li><strong> Song name </strong> Sunny is centrally positioned in the thumbnail.
+                                </li>
+                            </ul>
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/oSF4QhxZIXM?si=Xy9mNLhwy6_r1oW8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                             <ul class="list-inline item-details">
                                 <li>Date:
@@ -424,22 +442,31 @@
                                 <li><strong> Song name </strong> Sunny is positioned on the left side in the thumbnail.
                                 </li>
                             </ul>
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/bE9C3bHTHdU?si=2T1xPWTuAQYrwtXk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/sduQQ6UoS78?si=RQyJyu27odb9sxle" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 							<ul class="list-inline item-details">
                                 <li>Date:
                                     <strong>June 2023
                                     </strong>
                                 </li>
-                                <li><strong> Song name </strong> Sunny is centrally positioned in the thumbnail.
+                                <li><strong> Song name </strong> Sunny is positioned on the left in the thumbnail.
                                 </li>
                             </ul>
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/PXshKh1JZ_g?si=qUg8D3JcHzgGARTs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                             <ul class="list-inline item-details">
                                 <li>Date:
-                                    <strong>June 2023
+                                    <strong>Apr 2019
                                     </strong>
                                 </li>
-                                <li><strong> Song name </strong> Sunny is on the second row, right 1.
+                                <li><strong> Song name </strong> Sunny's first hiphop dance show, she is positioned as the third figure from the right in the thumbnail.
+                                </li>
+                            </ul>
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/6JWQr85Xpx0?si=S31g2eVeuveV1Tg0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+							<ul class="list-inline item-details">
+                                <li>Date:
+                                    <strong>Jun 2019
+                                    </strong>
+                                </li>
+                                <li><strong> Song name </strong> Sunny made her debut dance performance at Lujianping Dance & Arts, where she portrayed the character of Little Cavalry.
                                 </li>
                             </ul>
 							<iframe width="560" height="315" src="https://www.youtube.com/embed/NQjcYt9-nEE?si=RaOn7IyyTa6Nq3KD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -448,7 +475,7 @@
                                     <strong>Feb 2017
                                     </strong>
                                 </li>
-                                <li><strong> Song name </strong> Sunny's first Chinese dance.
+                                <li><strong> Song name </strong> Sunny's first Chinese dance, she is at front position in the thumbnail.
                                 </li>
                             </ul>
                         </div>
