add closing button

--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-						<h2>Hip-hop Performance</h2>
+						<h2>Dance Performance</h2>
                             <hr class="star-primary">
 							<iframe width="560" height="315" src="https://www.youtube.com/embed/gE1EBDNXPmA?si=TKkfNmuQYx1XR2O4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 							<ul class="list-inline item-details">
@@ -539,31 +539,25 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Piano Bot</h2>
+                            <h2>Sunny's Recent Drawing</h2>
                             <hr class="star-primary">
-                            <video width="300px" controls>
-                               <source src="https://cdn.glitch.com/ff1ca69f-ddf6-4632-8378-34074e19fe2e%2Fvideo-1567026061.mp4?v=1567028648871" type="video/mp4">
-                            </video>
-                            <p><br>The Piano Bot was designed as a tool to allow children to experiment with composing music.
-                               The roobot runs along a track of coloured squares, each of which represents a music note.
-                               After reading each of the notes, the stylus swivels to play the correct notes of the song.
-                               <br><br>
-                               A LEGO EV3 robot was used as the base model, with additional 3D printed and laser cut parts added. 
-                               The robot was programmed in C, available here: <a href="https://github.com/rebecca-butler/Piano-Bot">Piano Bot</a>
-                            </p>
-                            <ul class="list-inline item-details">
-                                <li>Date:
-                                    <strong>Jan - Apr 2018
-                                    </strong>
-                                </li>
-                                <li>Technologies:
-                                    <strong>LEGO EV3, 3D printer, laser cutter, sensors, C programming
-                                    </strong>
-                                </li>
-                            </ul>
-                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+							<img src="images/hydro.jpg" class="img-responsive img-centered" alt="">
+							<img src="images/cup.jpg" class="img-responsive img-centered" alt="">
+							<img src="images/dog.jpg" class="img-responsive img-centered" alt="">
+							<img src="images/santa.jpg" class="img-responsive img-centered" alt="">
+							<img src="images/eyes.jpg" class="img-responsive img-centered" alt="">
+							<img src="images/ear_nose.jpg" class="img-responsive img-centered" alt="">
+							<img src="images/sunny_drawing.jpg" class="img-responsive img-centered" alt="">
+							<h2>Sunny's Digial Painting</h2>
+                            <img src="images/watermelon.png" class="img-responsive img-centered" alt="">
+                            <img src="images/goose.png" class="img-responsive img-centered" alt="">
+                            <img src="images/mashroom.png" class="img-responsive img-centered" alt="">
+                            <img src="images/drop.jpg" class="img-responsive img-centered" alt="">
+                            <img src="images/snowman.png" class="img-responsive img-centered" alt="">
+                            <img src="images/deer.png" class="img-responsive img-centered" alt="">
                         </div>
                     </div>
+					<button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                 </div>
             </div>
         </div>
