--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Sunny's Recent Drawing</h2>
+                            <h2>Sunny's Recent Drawings</h2>
                             <hr class="star-primary">
 							<img src="images/hydro.jpg" class="img-responsive img-centered" alt="">
 							<img src="images/cup.jpg" class="img-responsive img-centered" alt="">
@@ -548,13 +548,16 @@
 							<img src="images/eyes.jpg" class="img-responsive img-centered" alt="">
 							<img src="images/ear_nose.jpg" class="img-responsive img-centered" alt="">
 							<img src="images/sunny_drawing.jpg" class="img-responsive img-centered" alt="">
-							<h2>Sunny's Digial Painting</h2>
+							<h2>Sunny's Digial Painting from 2019-2020</h4>
                             <img src="images/watermelon.png" class="img-responsive img-centered" alt="">
                             <img src="images/goose.png" class="img-responsive img-centered" alt="">
                             <img src="images/mashroom.png" class="img-responsive img-centered" alt="">
                             <img src="images/drop.jpg" class="img-responsive img-centered" alt="">
                             <img src="images/snowman.png" class="img-responsive img-centered" alt="">
                             <img src="images/deer.png" class="img-responsive img-centered" alt="">
+							<img src="images/night.png" class="img-responsive img-centered" alt="">
+							<img src="images/orange.png" class="img-responsive img-centered" alt="">
+							<img src="images/landscape.png" class="img-responsive img-centered" alt="">
                         </div>
                     </div>
 					<button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
