--- a/index.html
+++ b/index.html
@@ -306,6 +306,7 @@
                                 <li><strong> Gossec Gavotte </strong> Sunny's second voilin performance.
                                 </li>
                             </ul>
+							<button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
                     <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
@@ -478,6 +479,7 @@
                                 <li><strong> Song name </strong> Sunny's first Chinese dance, she is at front position in the thumbnail.
                                 </li>
                             </ul>
+							<button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
                     <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
@@ -498,25 +500,35 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Machining and Fabrication</h2>
+                            <h2>Sports Pictures</h2>
                             <hr class="star-primary">
-                            <img src="https://cdn.glitch.com/ff1ca69f-ddf6-4632-8378-34074e19fe2e%2Ftictac%20resized.jpg?v=1566932722685" width="462px">
-                            <img src="https://cdn.glitch.com/ff1ca69f-ddf6-4632-8378-34074e19fe2e%2F69762521_2452875624943254_4312511013338480640_n.jpg?v=1567026883926" width="250px">
-                            <p>
-                               I have completed several projects in the machine shop. 
-                               Pictured on the left is an aluminum tic-tac-toe board I designed in SolidWorks. 
-                               I machined the aluminum and brass pegs using a lathe, and the base using a mill and drill press.
-                               <br><br>
-                               The phone stand, pictured on the right, was also designed in SolidWorks and prototyped using a 3D printer.
-                            </p>
                             <ul class="list-inline item-details">
-                                <li>Date:
-                                    <strong>Sept - Dec 2017
+							<img src="images/basketball2023.JPG" class="img-responsive img-centered" alt="">
+                                <li>
+                                    <strong>
+									7th Grade Basketball team 
                                     </strong>
+									Sunny is positioned at the leftmost spot in the second row in the picture.
                                 </li>
-                                <li>Tools:
-                                    <strong>SolidWorks, lathe, mill, drill press, 3D printer
-                                    </strong>
+                            </ul>
+							<ul class="list-inline item-details">
+                            <img src="images/basketball2022.JPG" class="img-responsive img-centered" alt="">
+                                <li>
+                                    <strong>6th Grade Basketball team</strong>
+									Sunny is positioned at the second right spot in the picture.
+                                </li>
+                            </ul>
+							<ul class="list-inline item-details">
+                            <img src="images/volleyball2022.JPG" class="img-responsive img-centered" alt="">
+                                <li>
+                                    <strong>7th Grade Volleyball team</strong>
+                                    Sunny is positioned at the rightmost spot in the back row in the picture.
+                                </li>
+                            </ul>
+							<img src="images/volleyball2021.JPG" class="img-responsive img-centered" alt="">
+                                <li>
+                                    <strong>6th Grade Volleyball team</strong>
+                                    Sunny is positioned at the rightmost spot in the back row in the picture.
                                 </li>
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
@@ -558,6 +570,7 @@
 							<img src="images/night.png" class="img-responsive img-centered" alt="">
 							<img src="images/orange.png" class="img-responsive img-centered" alt="">
 							<img src="images/landscape.png" class="img-responsive img-centered" alt="">
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
 					<button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
