--- a/index.html
+++ b/index.html
@@ -376,6 +376,9 @@
  xxWild Geese Descending on the Sandbank (平沙落雁) / Song of Siton (丝桐颂) Busy Weaving (纺织忙)</strong> Sunny performed in the level 4/10 test and got the excellent pass.
                                 </li>
                             </ul>
+							<p>
+							<button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+							</p>
                         </div>
                     </div>
                     <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
