--- a/index.html
+++ b/index.html
@@ -595,18 +595,14 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Embedded Minesweeper</h2>
+                            <h2>Volunteer Experiences</h2>
                             <hr class="star-primary">
-                            <img src="https://cdn.glitch.com/ff1ca69f-ddf6-4632-8378-34074e19fe2e%2Fkeil.jpg?v=1566938786995" class="img-responsive img-centered" alt="">
-                            <p>I developed a Minesweeper game in C that runs on a Keil development board. 
-                               The game randomly distributes mines on a 9x9 grid and allows users to place flags or dig up mines.
-                               The player selects squares on the grid using a joystick, and uses one of two pushbuttons to place flags or dig.
-                                Check out the code here: <a href="https://github.com/rebecca-butler/Minesweeper">Minesweeper</a>
-                               <br><br>
-                          </p>
+                            <img src="images/qinghua1.JPG" class="img-responsive img-centered" alt="">
+							<img src="images/qinghua2.JPG" class="img-responsive img-centered" alt="">
+							<img src="images/qinghua3.JPG" class="img-responsive img-centered" alt="">
                             <ul class="list-inline item-details">
                                 <li>Date:
-                                    <strong>May - Aug 2019
+                                    <strong>Oct 2023
                                     </strong>
                                 </li>
                                 <li>Technologies:
