--- a/index.html
+++ b/index.html
@@ -305,8 +305,10 @@
                                 </li>
                                 <li><strong> Gossec Gavotte </strong> Sunny's second voilin performance.
                                 </li>
-                            </ul>
+                            </ul>	
+							<p>
 							<button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+							</p>
                         </div>
                     </div>
                     <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
@@ -534,7 +536,9 @@
                                     Sunny is positioned at the rightmost spot in the back row in the picture.
                                 </li>
                             </ul>
+							<p>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+							</p>
                         </div>
                     </div>
 					 <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
@@ -574,7 +578,9 @@
 							<img src="images/night.png" class="img-responsive img-centered" alt="">
 							<img src="images/orange.png" class="img-responsive img-centered" alt="">
 							<img src="images/landscape.png" class="img-responsive img-centered" alt="">
+							<p>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+							</p>
                         </div>
                     </div>
 					<button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
@@ -610,9 +616,12 @@
                                     </strong>
                                 </li>
                             </ul>
+							<p>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+							</p>
                         </div>
                     </div>
+					<button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                 </div>
             </div>
         </div>
