--- a/index.html
+++ b/index.html
@@ -612,8 +612,9 @@
                                     </strong>
                                 </li>
                                 <li>Technologies:
-                                    <strong>Keil development board, C programming, joystick and pushbutton interfacing
+                                    <strong>Silicon Valley Tsinghua Alumni Association 2023 Annual Gathering
                                     </strong>
+									Sunny took charge of leading children in a variety of enjoyable math related activities.
                                 </li>
                             </ul>
 							<p>
